<resources>
    <string name="app_name">Arabook</string>
    <string name="admin_id" translatable="false">Ls2Dy2iPBbNsTTkAyu4DCgq0R7h1</string>
    <string name="loginTxt">Login</string>
    <string name="forget_password">Forget password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="signup">Click here to sign up</string>
    <string name="email_address">Email Address</string>
    <string name="invalid_account_data">Invalid Account Data</string>
    <string name="terms_and_policy_txt"><![CDATA[ You agree to Arabook\'s Terms of Services & Privacy Policy]]></string>
    <string name="create_account">Create Account</string>
    <string name="check_inbox_for_email">Account is successfully created go to your inbox to verify</string>
    <string name="not_verified_yet">Your account is not verified yet</string>
    <string name="you_already_have_an_account">You already have an account ?</string>
    <string name="birth_of_date">Birth of date</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="or">or</string>
    <string name="login_with_google">Login with google</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="proceed">Proceed</string>
    <string name="my_library">My Library</string>
    <string name="my_novel">My Novel</string>
    <string name="news">News</string>
    <string name="call_us">Call us</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="published">Published</string>
    <string name="draft">Draft</string>
    <string name="you_have_nt_written_any_story_yet">You have\'nt written any story yet</string>
    <string name="write_now">Write Now</string>
    <string name="add_story_info">Add Story Info</string>
    <string name="add_story_cover">Add Story Cover</string>
    <string name="edit_story_cover">Edit Story Cover</string>
    <string name="story_description">Story Description</string>
    <string name="story_name">Story Name</string>
    <string name="story_type">Story Type</string>
    <string name="for_adult_or_not">for Adult (Contains bloody scenes) ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="completed_or_not">Completed ?</string>


    <string name="horror">Horror</string>
    <string name="fiction">Fiction</string>
    <string name="adventures">Adventures</string>
    <string name="romantic">Romantic</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="psychological">Psychological</string>
    <string name="mystery">Mystery</string>
    <string name="police">Police</string>
    <string name="comedy">Comedy</string>
    <string name="historical">Historical</string>
    <string name="drama">Drama</string>
    <string name="realistic">Realistic</string>
    <string name="short_stories">Short Stories</string>
    <string name="non_fiction">Non fiction</string>

    <string name="publish">Publish</string>
    <string name="write_your_part_name">Write your part name</string>
    <string name="start_your_part">Start Your Part</string>
    <string name="text_options">Text Options</string>
    <string name="pick_color">Pick Color</string>
    <string name="font_setting">Font Setting</string>
    <string name="u" translatable="false">U</string>
    <string name="i" translatable="false">I</string>
    <string name="b" translatable="false">B</string>
    <string name="add_chapter_image">Add chapter Image</string>
    <string name="n" translatable="false">N</string>
    <string name="loading_dialog_text">Loading Please wait....</string>
    <string name="chapter_error">Please enter chapter Name and chapter text </string>
    <string name="draft_warning">Do you want to save draft ?</string>
    <string name="edit_story">Edit Story</string>
    <string name="your_chapters">Your Chapters</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="go_back">Do you want to go back ?</string>
    <string name="delete_chapter_message">Do you want to delete this chapter ?</string>
    <string name="delete_story_message">Do you want to delete this story ?</string>
    <string name="edit_story_name">Edit story name</string>
    <string name="edit_story_desc">Edit story description</string>
    <string name="accept_edit_message">Do you want to save edits ?</string>
    <string name="select_story_type">Select story type</string>
    <string name="other_tags">+ Other Tags</string>
    <string name="ok">OK</string>
    <string name="cannot_choose_over_4">You can\'t choose more than 4 tags</string>
    <string name="data_updated">Data is updated</string>
    <string name="choose_tags">Choose Tags</string>
    <string name="type_tags_error">You can\'t make story type as tag</string>
    <string name="no_drafts_yet">No drafts yet</string>
    <string name="word_count">Word Count : </string>
    <string name="check_internet">Check Your Internet Connection</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="novel">Novel</string>
    <string name="your_full_name">Your Full name</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="light_mode">Light Mode</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="bio">Bio</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="publish_days">+ Publish Days</string>
    <string name="choose_days">Choose Days</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="add_new_draft">Add new Draft</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="message_will_be_sent_to_this_account">Message will be sent to this account</string>
    <string name="send">Send</string>
    <string name="email_cannot_null">Enter Email Address !!</string>
    <string name="check_inbox">Check your inbox</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Reset Password</string>
    <string name="hello_admin">Hello admin</string>
    <string name="view_all_novels">View all novels</string>
    <string name="type_novel_name">Type novel name</string>
    <string name="discover">Discover</string>
    <string name="intellectual_rights">+ Intellectual rights</string>
    <string name="choose_security_type">Choose Security Type</string>
    <string name="first_security">“All rights reserved (©)”: which means that all materials inside the novel are not allowed to be used in any way without the permission of their owners.</string>
    <string name="second_security">\"CC0 (Public Domain): which gives complete freedom to use the novel without mentioning the source.\"</string>
    <string name="third_security">\"Creative commons: As an author, you accept that the novel will be re-used, and you have the right to specify the terms of re-use.\"</string>

    <string name="suggestions">Suggestions</string>
    <string name="rising_novel">Rising Novel</string>

    <string name="completed">Completed Novels</string>
    <string name="all_story_types">All Story Types</string>
    <string name="latest_novels">Latest Novels</string>
    <string name="more">more</string>
    <string name="read_now">Read Now</string>
    <string name="_0" translatable="false">0</string>
    <string name="views">Views</string>
    <string name="complete">Completed</string>
    <string name="not_completed">Not Completed</string>
    <string name="vote">Vote</string>
    <string name="security_view">All rights are save</string>

    <string name="add_vote">Thanks for voting !</string>
    <string name="remove_vote">Your vote has been removed</string>
    <string name="comments">Comments</string>
    <string name="type_your_comment">Type your comment…</string>
    <string name="no_comments">No Comments</string>
    <string name="reply">Reply</string>
    <string name="reviews">Reviews</string>
    <string name="it_contains_spoilers">It contains spoilers</string>
    <string name="it_contains_spoilers_read">It contains spoilers <u>Read</u></string>
    <string name="add_review">Add Review....</string>
    <string name="add_to_library">Add to library</string>
    <string name="added_to_library">Added to the library</string>
    <string name="restore_position_msg">Do you want to go back to point you stop at ?</string>
    <string name="delete">Delete</string>
    <string name="you_don_t_have_any_stories_in_your_library">You don\'t have any stories in your library</string>
    <string name="choose_now">Choose Now</string>
    <string name="delete_warning">Are you sure?</string>
    <string name="choose_what_you_d_like_to_share_with_community_members">Choose what you\'d like to share with community members.</string>
    <string name="create_content">Create content</string>
    <string name="poem">Poem</string>
    <string name="poems">Poems</string>
    <string name="post">Post</string>
    <string name="new_poem">New Poem</string>
    <string name="new_post">New Post</string>
    <string name="poem_title">Poem title</string>
    <string name="type_your_text">Type your text</string>
    <string name="enter_poem_title">Enter poem title</string>
    <string name="poem_empty">Poem cannot be empty !!</string>
    <string name="post_empty">Post cannot be empty !!</string>
    <string name="posts">Posts</string>
    <string name="not_250_word">You cannot write more than 250 word</string>
    <string name="books">Books</string>
    <string name="press_back_again">Please click BACK again to exit</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="add_to_library_message">Add to your library ?</string>
    <string name="add_new_news">Add new news</string>
    <string name="add_news_image">Add news image</string>
    <string name="write_news_title">Write news title</string>
    <string name="write_the_new">Write the new</string>
    <string name="news_error">"Please complete news data "</string>
    <string name="arabook_news">Arabook news</string>
    <string name="delete_story">Delete Story</string>
    <string name="there_are_no_news">There are no news</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-5092685515539022/3259608685</string>
    <string name="version_of_app" translatable="false">Version 1.0 </string>
    <string name="evitras" translatable="false">Evitras</string>
    <string name="copyright_2020_evitras_corporation" translatable="false">Copyright © 2020 Evitras Corporation.</string>
    <string name="all_rights_reserved" translatable="false">All rights reserved.</string>
    <string name="version_dialog">Your android version is not compatible with this application</string>
    <string name="story_data_not_completed">Story Data Not Completed</string>
    <string name="no_users">No Users</string>
    <string name="start_download">start download</string>
    <string name="view_all_users">View All Users</string>

</resources>