<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:title="@string/home"
            android:enabled="true"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/libraryFragment"
            android:title="@string/my_library"
            android:enabled="true"
            android:icon="@drawable/ic_library"/>

        <item
            android:id="@+id/myNovelFragment"
            android:title="@string/my_novel"
            android:enabled="true"
            android:icon="@drawable/ic_write"/>


        <item
            android:id="@+id/newsFragment"
            android:title="@string/news"
            android:enabled="true"
            android:icon="@drawable/ic_notifications"/>

        <item
            android:id="@+id/profileFragment"
            android:title="@string/profile"
            android:enabled="true"
            android:icon="@drawable/ic_person"/>

    </group>

</menu>